<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/eventCreationToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_back"
            app:title="Create an Event"
            app:titleTextColor="@android:color/white" />

        <EditText
            android:id="@+id/eventTitleSetter"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:hint="Event Name" />

        <!-- Icon URL and Upload Button -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Icon Image URL (Optional)"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/eventIconUrlSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Leave blank or upload for default"/>
        <Button
            android:id="@+id/uploadIconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Icon" />

        <!-- Banner URL and Upload Button -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Banner Image URL (Optional)"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/eventBannerUrlSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Leave blank or upload for default"/>
        <Button
            android:id="@+id/uploadBannerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="Set Capacity:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/eventCapacitySetter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:hint="50"
                android:inputType="number"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="Choose Category:"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/category_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Set Date:"
                    android:textSize="16sp" />

                <DatePicker
                    android:id="@+id/eventDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:scaleX="1"
                    android:scaleY="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Set Time:"
                    android:textSize="16sp" />

                <TimePicker
                    android:id="@+id/eventTimePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:timePickerMode="spinner" />
            </LinearLayout>
        </LinearLayout>

        <!-- Registration Deadline Picker -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Set Registration Deadline:"
                android:textSize="16sp" />

            <DatePicker
                android:id="@+id/registrationDeadlinePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:scaleX="1"
                android:scaleY="1" />
                
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Set Registration Deadline Time:"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TimePicker
                android:id="@+id/registrationDeadlineTimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleX="1"
                android:scaleY="1"
                android:timePickerMode="spinner" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/createEventProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/eventCreationConfirm"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="5dp"
            android:text="Create Event"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>